Grace/tests/gibbs/errors/t090.grace
// ERROR = P1023
print(6 * 9, 42 : Number)
